# screenutils

./: .gitignore  CONTRIBUTORS  LICENSE  MANIFEST  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: modernization-plan.md
screenctl/: __init__.py  errors.py  screen.py
screenutils/: screen.py
tests/: test_high_level_api.py  test_imports.py  test_integration_screen.py  test_screen_commands.py  test_screen_parsing.py  test_tailf.py
