[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "screenctl"
version = "0.0.1.6.2"
description = "Library for GNU screen: create, close, list, log sessions, and inject commands."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Christophe Narbonne" }
]
maintainers = [
    { name = "TutuchanXD" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/TutuchanXD/screenctl"
Repository = "https://github.com/TutuchanXD/screenctl"

[tool.setuptools.packages.find]
include = ["screenctl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that require a real GNU screen binary",
]
